--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,13 @@
 /* Ubuntu font */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montaga&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 /* src/styles/tailwind.css */
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -19,8 +18,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-
 
 body {
   margin: 0;
@@ -55,8 +52,8 @@ body {
 
 /* MENUBAR */
 .scale-up-tr {
-	-webkit-animation: scale-up-tr 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: scale-up-tr 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+  -webkit-animation: scale-up-tr 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: scale-up-tr 0.4s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 .menu-link li:hover {
@@ -64,39 +61,38 @@ body {
   color: rgb(238, 255, 15);
 }
 
- @-webkit-keyframes scale-up-tr {
+@-webkit-keyframes scale-up-tr {
   0% {
     -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
   }
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
   }
 }
 @keyframes scale-up-tr {
   0% {
     -webkit-transform: scale(0.5);
-            transform: scale(0.5);
+    transform: scale(0.5);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
   }
   100% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
     -webkit-transform-origin: 100% 0%;
-            transform-origin: 100% 0%;
+    transform-origin: 100% 0%;
   }
 }
 
 /* RESPONSIVENESS */
 
 @media only screen and (max-width: 930px) {
-
   .NavLinks {
     display: none;
   }
@@ -110,11 +106,9 @@ body {
   .LocationsInner div p {
     width: 25%;
   }
-  
 }
 
 @media only screen and (max-width: 830px) {
-
   .AboutWrap .aboutImg {
     width: 230px;
   }
@@ -124,34 +118,31 @@ body {
   }
 
   .bannerWrap div .mainText {
-    font-size: 1.500rem /* 30px */;
-    line-height: 2.00rem /* 36px */;
+    font-size: 1.5rem /* 30px */;
+    line-height: 2rem /* 36px */;
   }
 
   .bannerWrap div .subText {
-    font-size: 1.00rem /* 20px */;
+    font-size: 1rem /* 20px */;
     line-height: 1.35rem /* 28px */;
   }
 
   .bannerWrap .texts {
     flex-grow: 1;
   }
-
 }
 
 @media only screen and (max-width: 550px) {
-
   .aboutInner {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    gap: 60px
-  } 
+    gap: 60px;
+  }
 
   .FeaturesWrap {
-    position:absolute;
+    position: absolute;
     bottom: -40px;
-    right: 70px
-
+    right: 70px;
   }
 
   .LocationsInner div p {
@@ -161,13 +152,13 @@ body {
   }
 
   .LocationsInner div {
-    gap: 30px
+    gap: 30px;
   }
 
   .ServiceBox .anim {
     width: 80px;
     height: 80px;
-    top: -40px
+    top: -40px;
   }
 
   .ServiceBox {
@@ -180,16 +171,16 @@ body {
   }
 
   .bannerWrap {
-    gap:12px
+    gap: 12px;
   }
-  
+
   .bannerWrap div .mainText {
-    font-size: 1.500rem /* 30px */;
-    line-height: 1.60rem /* 36px */;
+    font-size: 1.5rem /* 30px */;
+    line-height: 1.6rem /* 36px */;
   }
 
   .bannerWrap div .subText {
-    font-size: 1.00rem /* 20px */;
+    font-size: 1rem /* 20px */;
     line-height: 1.35rem /* 28px */;
     width: 240px;
   }
@@ -197,18 +188,16 @@ body {
   .call p {
     font-size: 8px;
   }
-
 }
 
 @media only screen and (max-width: 430px) {
-
   .Banner {
     height: fit-content;
   }
 
   .bannerWrap {
-    flex-direction:column-reverse;
-    gap: 50px
+    flex-direction: column-reverse;
+    gap: 50px;
   }
 
   .bannerWrap {
@@ -219,12 +208,12 @@ body {
     left: 45px;
     padding-left: 20px;
     padding-right: 20px;
-    width: 80%
+    width: 80%;
   }
 
   .serviceInner div {
     flex-direction: column;
-    gap: 0px
+    gap: 0px;
   }
 
   .serviceInner .divider {
@@ -233,41 +222,40 @@ body {
   }
 
   .serviceInner div hr {
-   height: 2px;
-   width: 100%;
+    height: 2px;
+    width: 100%;
   }
 
   .serviceInner div .btm {
     top: 190px;
-   }
-
-   .bannerWrap .texts {
-    align-items: center;
-   }
-
-   .bannerWrap .texts p{
-    text-align: center;
-   }
-
-   .bannerWrap .texts .mainText {
-    width: 60%;
-    line-height: 1.70rem /* 36px */;
-   }
-
-   .ServiceBox p {
-    font-size: 0.9rem /* 12px */;
-    line-height: 1rem /* 16px */;
-   }
-
-   .serviceInner .s2,  .serviceInner .s4 {
-    margin-top: 70px;
-   }
-
-   .PaymentWrap p {
-    width: 75%;
   }
 
-  
+  .bannerWrap .texts {
+    align-items: center;
+  }
+
+  .bannerWrap .texts p {
+    text-align: center;
+  }
+
+  .bannerWrap .texts .mainText {
+    width: 60%;
+    line-height: 1.7rem /* 36px */;
+  }
+
+  .ServiceBox p {
+    font-size: 0.9rem /* 12px */;
+    line-height: 1rem /* 16px */;
+  }
+
+  .serviceInner .s2,
+  .serviceInner .s4 {
+    margin-top: 70px;
+  }
+
+  .PaymentWrap p {
+    width: 75%;
+  }
 }
 
 @media only screen and (max-width: 390px) {
@@ -277,7 +265,7 @@ body {
 
   .FeaturesWrap div p {
     font-size: 0.75rem /* 12px */;
-    line-height: 0.8rem /* 16px */
+    line-height: 0.8rem; /* 16px */
   }
 
   .WorkingHrsWrap .timing p {
@@ -319,8 +307,10 @@ body {
     flex-direction: column;
   }
 
-  .ContactWrap input,  .ContactWrap textarea, .AppointmentWrap input, .AppointmentWrap textarea {
+  .ContactWrap input,
+  .ContactWrap textarea,
+  .AppointmentWrap input,
+  .AppointmentWrap textarea {
     width: 80%;
   }
-  
 }
